force-app/main/default/objects/HubSpotAcrSync__e/HubSpotAcrSync__e.object-meta.xml
<CustomObject>
    <label>HubSpot ACR Sync</label>
    <pluralLabel>HubSpot ACR Sync</pluralLabel>
</CustomObject>