force-app/main/default/objects/HubSpotAcrSync__e/fields/AcrId__c.field-meta.xml
<CustomField>
    <fullName>AcrId__c</fullName>
    <label>ACR Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>