force-app/main/default/objects/HubSpotAcrSync__e/fields/HubspotAccountId__c.field-meta.xml
<CustomField>
    <fullName>HubspotAccountId__c</fullName>
    <label>Hubspot AccountId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>