force-app/main/default/objects/HubSpotAcrSync__e/fields/HubspotContactId__c.field-meta.xml
<CustomField>
    <fullName>HubspotContactId__c</fullName>
    <label>Hubspot ContactId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>