force-app/main/default/objects/HubSpotAcrSync__e/fields/PerformDelete__c.field-meta.xml
<CustomField>
    <fullName>PerformDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perform Delete</label>
    <type>Checkbox</type>
</CustomField>